# tremor-lib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: conftest.py  test_eventfilters.py  test_smoketests.py
tests/filters/: conftest.py  test_filters.py
tests/testconnector/: __init__.py
tremor/: __init_222_.py  __init__.py
tremor/connectors/: __init__.py
tremor/connectors/dummy/: __init__.py
tremor/eventbus/: __init__.py
tremor/eventbus/events/: __init__.py
tremor/eventbus/filters/: __init__.py
tremor/events/: __init__.py
tremor/events/filters/: __init__.py
tremor/oauth/: __init__.py
tremor/tremor_connector_twitchtv/: __init__.py
tremor/tremor_connector_twitter/: __init__.py
