[tool.poetry]
name = "tremor"
version = "0.1.0"
description = "An asyncio powered aggregator for event generating APIs"
authors = ["Axel Philipsenburg <axel@wired-space.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
httpx = "^0.18.0"
httpx-oauth = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-mock  = "^3.6.1"
pytest-flake8 = "^1.0.7"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.14.0"

[tool.black]
line-length = 79
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--flake8"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
